--- a/client/src/styles/_var.scss
+++ b/client/src/styles/_var.scss
@@ -5,18 +5,20 @@
 $white: #ffffff;
 
 $orange: #FD6E22;
-$orange-opacity: rgba($orange, 0.15);
+$orange-light: rgba($orange, 0.15);
 
 $blue: #D0EBF5;
-$blue-opacity: rgba($blue, 0.5);
+$blue-light: rgba($blue, 0.5);
 
 $beige: #F3F0EB;
 
 $violet: #400A4D;
 $violet-transition: #59006F;
 
+$violet-light: #F6F0FA;
+
 $mint: #A4D5A4;
-$mint-opacity: rgba($mint, 0.3);
+$mint-light: rgba($mint, 0.3);
 
 $border-color: #D8D8D8;
 
