--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -1,10 +1,3 @@
-body, .body {
-  font-family: $font-family;
-  font-size: $base-font-size;
-  color: $text-color;
-  font-weight: 300;
-}
-
 a {
   text-decoration: none;
 
@@ -40,9 +33,13 @@ h4, .h4 {
   font-weight: 400;
 }
 
-.light {
-  color: $light-color;
-  font-weight: 300;
+.bold {
+  font-weight: 400;
+}
+
+.paragraph {
+  font-size:18px;
+  line-height: 24px;
 }
 
 .capitalize {
@@ -51,4 +48,9 @@ h4, .h4 {
 
 .uppercase {
   text-transform: uppercase;
+}
+
+.underline {
+  border-bottom: 1px solid $orange;
+  padding-bottom: 10px;
 }
