--- a/client/src/styles/_shame.scss
+++ b/client/src/styles/_shame.scss
@@ -32,6 +32,12 @@
   }
 }
 
+.v-expansion-panel__header {
+  padding-left: 0;
+  padding-right: 0;
+
+}
+
 ul.v-expansion-panel {
   margin-left: 0px;
 }
