--- a/client/src/styles/_shame.scss
+++ b/client/src/styles/_shame.scss
@@ -47,3 +47,18 @@ ul.v-expansion-panel {
   flex-direction: column;
   justify-content: center;
 }
+
+
+.container {
+  max-width: 1028px;
+}
+
+.hero--image {
+  max-width: 750px;
+  margin: auto;
+}
+
+
+.mb-10 {
+  margin-bottom: 96px;
+}
