--- a/client/src/styles/_typography.scss
+++ b/client/src/styles/_typography.scss
@@ -27,6 +27,12 @@ h2, .h2 {
   font-weight: 300;
   max-width: 780px;
   margin: auto;
+
+  &.full-width {
+    max-width: initial;
+    margin: initial;
+  }
+
 }
 
 h3, .h3, .lead {
@@ -51,7 +57,6 @@ h4, .h4 {
     max-width: initial;
     margin: initial;
   }
-
 }
 
 .bold {
