--- a/client/src/styles/_coloring.scss
+++ b/client/src/styles/_coloring.scss
@@ -51,6 +51,13 @@
   color: $text-color;
 }
 
+.background--orange-50 {
+  background-color: $orange-50 !important;
+  color: $text-color;
+}
+
+
+
 .background--beige {
   background-color: $beige !important;
   color: $text-color;
