--- a/client/src/styles/_var.scss
+++ b/client/src/styles/_var.scss
@@ -6,6 +6,8 @@ $white: #ffffff;
 
 $orange: #FD6E22;
 $orange-light: rgba($orange, 0.15);
+$orange-50: rgba($orange, 0.5);
+
 
 $blue: #D0EBF5;
 $blue-light: rgba($blue, 0.5);
